fix header flicker on authentication

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -53,6 +53,16 @@
       transform: translateY(0);
     }
   }
+
+  --animate-header-from-top: header-from-top 0.5s ease-out;
+  @keyframes header-from-top {
+    0% {
+      transform: translateY(-100);
+    }
+    100% {
+      transform: translateY(0);
+    }
+  }
 }
 
 :root {
